--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container-fluid">
 <!--<a class="navbar-brand" href="#quemsomos">quem somos</a>-->
                 <a class="navbar-brand" href="https://github.com/malanski">
-                    <img src="favicon.ico" width="50" height="auto" title="contact github WebDeveloper" alt="triangulo circunscrito, logo marca">
+                    <img src="favicon2.ico" width="50" height="auto" title="contact github WebDeveloper" alt="triangulo circunscrito, logo marca">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
